fixed diagonal cut off caused by css polygon clipping

--- a/static/style.css
+++ b/static/style.css
@@ -35,7 +35,6 @@ html, body {
 	justify-content: center;
 	align-items: center;
 	position: relative;
-	clip-path: polygon(0 0, 100% 0, 100% 68%, 0% 100%);
 	width: 100vw;
 	height: 150vh;
 	transform-origin: top left;
